# RecSys-Challenge

music-crs-baselines/: pyproject.toml  readme.md  run_inference_blindset.py  run_inference_devset.py
music-crs-baselines/config/: llama1b_bert_blindset_A.yaml  llama1b_bert_devset.yaml  llama1b_hybrid_rrf_blindset_A.yaml  llama1b_hybrid_rrf_devset.yaml  qwen35_hybrid_rrf_blindset_A.yaml  qwen35_hybrid_rrf_devset.yaml  qwen3_1p7b_hybrid_rrf_blindset_A.yaml  qwen3_1p7b_hybrid_rrf_devset.yaml  template_hybrid_rrf_blindset_A.yaml  template_hybrid_rrf_devset.yaml
music-crs-baselines/mcrs/: __init__.py  crs_baseline.py  inference_context.py
music-crs-baselines/mcrs/db_item/: music_catalog.py
music-crs-baselines/mcrs/lm_modules/: __init__.py  llama.py  template.py
music-crs-baselines/mcrs/retrieval_modules/: __init__.py  bert.py  bm25.py  cf.py  hybrid_rrf.py
music-crs-baselines/mcrs/system_prompts/: response_generation.txt
